--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoDipendente.tex
@@ -1,6 +1,6 @@
 
 %diagramma
-\paragraph{UC-39 Creazione di una nuova prenotazione}
+\paragraph{UC-46 Creazione di una nuova prenotazione}
     \begin{itemize}
 	    \item \textbf{Attore primario:} dipendente;
 
@@ -12,15 +12,15 @@
 
 	    \item \textbf{Scenario principale:}
 	        \begin{enumerate}
-		        \item il dipendente seleziona una stanza da una lista di stanze disponibili (UC-.1 Selezione stanza);
-		        \item il dipendente seleziona una postazione da una lista di postazioni disponibili all'interno della stanza (UC- .2 Selezione stanza); 
-		        \item il dipendente seleziona la data in cui effettuare la prenotazione (UC- .3Seleziona data);
-		        \item il dipendente seleziona l'orario in cui intende far partire la prenotazione della postazione (UC- .4 Selezione orario d'inizio);
-		        \item il dipendente seleziona la durata della propria prenotazione (UC- .5 Selezione della durata);
+		        \item il dipendente seleziona una stanza da una lista di stanze disponibili (UC-46.1 Selezione stanza);
+		        \item il dipendente seleziona una postazione da una lista di postazioni disponibili all'interno della stanza (UC-46.2 Selezione stanza); 
+		        \item il dipendente seleziona la data in cui effettuare la prenotazione (UC-46.3 Seleziona data);
+		        \item il dipendente seleziona l'orario in cui intende far partire la prenotazione della postazione (UC-46.4 Selezione orario d'inizio);
+		        \item il dipendente seleziona la durata della propria prenotazione (UC-46.5 Selezione della durata);
 	        \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-39.1 Selezione stanza}
+\paragraph{UC-46.1 Selezione stanza}
 
     \begin{itemize}
 	    \item \textbf{Attore primario:} dipendente;
@@ -37,7 +37,7 @@
 	        \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-39.2 Selezione postazione}
+\paragraph{UC-46.2 Selezione postazione}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -54,7 +54,7 @@
             \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-39.3 Selezione data}
+\paragraph{UC-46.3 Selezione data}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -72,7 +72,7 @@
     \end{itemize}
 
 %TODO: guardare come farlo
-\paragraph{UC-39.4 Selezione fascia oraria}
+\paragraph{UC-46.4 Selezione fascia oraria}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -89,7 +89,7 @@
             \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-39.5 Selezione della durata}
+\paragraph{UC-46.5 Selezione della durata}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -107,7 +107,7 @@
     \end{itemize}
   
 %diagramma
-\paragraph{UC-40 Visualizzazione delle prenotazioni effettuate}
+\paragraph{UC-47 Visualizzazione delle prenotazioni effettuate}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -120,12 +120,12 @@
 
         \item \textbf{Scenario principale:}
             \begin{enumerate}
-                 \item il sistema restituisce un elenco contenente tutte le prenotazioni effettuate da un dipendente. Il dipendente può visualizzare l'ID (UC- .1 Visualizzazione id prenotazione), la data (UC- .2 Visualizzazione data), l'ora di inizio (UC- .3 Visualizzazione orario d'inizio), la stanza (UC- .4 Visualizzazione stanza), il codice della postazione prenotata (UC- .5 Visualizzazione codice postazione) e la durata (UC- .6 Visualizzazione della durata della prenotazione) a partire da una singola prenotazione;
+                 \item il sistema restituisce un elenco contenente tutte le prenotazioni effettuate da un dipendente. Il dipendente può visualizzare l'ID (UC-47.1 Visualizzazione id prenotazione), la data (UC-47.2 Visualizzazione data), l'ora di inizio (UC-47.3 Visualizzazione orario d'inizio), la stanza (UC-47.4 Visualizzazione stanza), il codice della postazione prenotata (UC-47.5 Visualizzazione codice postazione) e la durata (UC-47.6 Visualizzazione della durata della prenotazione) a partire da una singola prenotazione;
             \end{enumerate}
     \end{itemize}
 
 
-\paragraph{UC-40.1 Visualizzazione id prenotazione}
+\paragraph{UC-47.1 Visualizzazione id prenotazione}
     
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -142,7 +142,7 @@
             \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-40.2 Visualizzazione data}
+\paragraph{UC-47.2 Visualizzazione data}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -159,7 +159,7 @@
             \end{enumerate}
     \end{itemize} 
 
-\paragraph{UC-40.3 Visualizzazione orario d'inizio}
+\paragraph{UC-47.3 Visualizzazione orario d'inizio}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -176,7 +176,7 @@
             \end{enumerate}
     \end{itemize} 
 
-\paragraph{UC-40.4 Visualizzazione stanza}
+\paragraph{UC-47.4 Visualizzazione stanza}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -193,7 +193,7 @@
             \end{enumerate}
     \end{itemize} 
 
-\paragraph{UC-40.5 Visualizzazione codice postazione}
+\paragraph{UC-47.5 Visualizzazione codice postazione}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -210,7 +210,7 @@
             \end{enumerate}
     \end{itemize} 
 
-\paragraph{UC-.6 Visualizzazione della durata della prenotazione}
+\paragraph{UC-47.6 Visualizzazione della durata della prenotazione}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -228,7 +228,7 @@
     \end{itemize} 
 
 
-\paragraph{UC-41 Cancellazione di una prenotazione}
+\paragraph{UC-48 Cancellazione di una prenotazione}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -246,7 +246,7 @@
             \end{enumerate}
     \end{itemize} 
 %TODO:finire
-\paragraph{UC-42 Marcatura postazione come igienizzata}
+\paragraph{UC-49 Marcatura postazione come igienizzata}
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
 
@@ -259,12 +259,12 @@
         \item \textbf{Scenario principale:}
             \begin{enumerate}
                 \item il dipendente seleziona la postazione da pulire da un elenco di postazioni sporche;
-                \item il dipendente scansiona il tag RFID della postazione per segnalare l'avvenuta igienizzazione (UC- .1 Scansione del tag RFID per segnalare l'avvenuta igienizzazione);
+                \item il dipendente scansiona il tag RFID della postazione per segnalare l'avvenuta igienizzazione (UC-49.1 Scansione del tag RFID per segnalare l'avvenuta igienizzazione);
                 \item il sistema aggiorna lo stato della postazione da sporca a pulita.
             \end{enumerate}
     \end{itemize} 
 
-\paragraph{UC-42.1 Scansione del tag RFID per segnalare avvenuta igienizzazione}
+\paragraph{UC-49.1 Scansione del tag RFID per segnalare avvenuta igienizzazione}
     
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -282,7 +282,7 @@
             \end{enumerate}
     \end{itemize} 
 
-\paragraph{UC-43 Scansione presenza}
+\paragraph{UC-50 Scansione presenza}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -296,15 +296,15 @@
         \item \textbf{Scenario principale:}
             \begin{enumerate}
                 \item il dipendente seleziona la funzionalità di rilevamento della presenza;
-                \item il dipendente scansiona il tag RFID della postazione in cui è seduto (UC- .1 Scansione del tag RFID per segnalare la propria presenza nella postazione);
-                \item il sistema fornisce informazioni relative allo stato della postazione (UC-.2 Visualizzazione informazioni postazione). Qualora la postazione risulti non disabilitata o non occupata il sistema invierà una richiesta di avvio dell'utilizzo;
-                \item il dipendente conferma l'utilizzo della postazione (UC- .3 Avvio utilizzo);
+                \item il dipendente scansiona il tag RFID della postazione in cui è seduto (UC-50.1 Scansione del tag RFID per segnalare la propria presenza nella postazione);
+                \item il sistema fornisce informazioni relative allo stato della postazione (UC-50.2 Visualizzazione informazioni postazione). Qualora la postazione risulti non disabilitata o non occupata il sistema invierà una richiesta di avvio dell'utilizzo;
+                \item il dipendente conferma l'utilizzo della postazione (UC-50.3 Avvio utilizzo);
                 \item il sistema aggiorna lo stato della postazione da libera a occupata.
             \end{enumerate}
     \end{itemize} 
 
 
-\paragraph{UC-43.1 Scansione del tag RFID per segnalare la propria presenza nella postazione}
+\paragraph{UC-50.1 Scansione del tag RFID per segnalare la propria presenza nella postazione}
    
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -322,7 +322,7 @@
             \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-43.2 Visualizzazione informazioni postazione}
+\paragraph{UC-50.2 Visualizzazione informazioni postazione}
 
 \begin{itemize}
     \item \textbf{Attore primario:} dipendente;
@@ -339,7 +339,7 @@
         \end{enumerate}
 \end{itemize}
 
-\paragraph{UC-43.3 Avvio utilizzo}
+\paragraph{UC-50.3 Avvio utilizzo}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
@@ -357,7 +357,7 @@
             \end{enumerate}
     \end{itemize}
 
-\paragraph{UC-44 Terminazione utilizzo della postazione}
+\paragraph{UC-51 Terminazione utilizzo della postazione}
 
     \begin{itemize}
         \item \textbf{Attore primario:} dipendente;
