--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
@@ -1,4 +1,4 @@
-\paragraph{UC-45 Visualizzazione stanze da igienizzare}
+\paragraph{UC-52 Visualizzazione stanze da igienizzare}
 \begin{itemize}
     \item \textbf{Attori:} igienizzatore;
     \item \textbf{Descrizione:} un igienizzatore pu\`{o} visualizzare a video l'elenco delle stanze che necessitano di essere igienizzate;
@@ -23,7 +23,7 @@
             \end{itemize}
     \end{itemize}
 %TODO: controllare
-\paragraph{UC-46 Marcatura stanza come igienizzata}
+\paragraph{UC-53 Marcatura stanza come igienizzata}
 
     \begin{itemize}
         \item \textbf{Attori primari:} igienizzatore;
@@ -33,12 +33,12 @@
         \item \textbf{Scenario principale:} 
             \begin{itemize}
                 \item l'igienizzatore seleziona la stanza da marcare come igienizzata;	
-                \item l'igienizzatore contrassegna la stanza come igienizzata scansionando il tag RFID ad essa associata (UC- .1 Scansione del tag RFID per segnalare la pulizia di una stanza);
+                \item l'igienizzatore contrassegna la stanza come igienizzata scansionando il tag RFID ad essa associata (UC-53.1 Scansione del tag RFID per segnalare la pulizia di una stanza);
                 \item il sistema elabora correttamente la richiesta contrassegnando tutte le postazioni all'interno della stanza come igienizzate.
             \end{itemize}
     \end{itemize}
 
-\paragraph{UC- .1 Scansione del tag RFID per segnalare la pulizia di una stanza}
+\paragraph{UC-53.1 Scansione del tag RFID per segnalare la pulizia di una stanza}
 
     \begin{itemize}
         \item \textbf{Attori primari:} igienizzatore;
