--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/main.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/main.tex
@@ -1,4 +1,4 @@
-\subsubsection{Gestione autenticazine}\label{sec:GestioneAutenticazine}
+\subsubsection{Gestione autenticazione}\label{sec:GestioneAutenticazine}
 \input{src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex}
 
 \subsubsection{Gestione e monitoraggio utenti}\label{sec:GMUtenti}
