--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioPostazioni.tex
@@ -1,6 +1,6 @@
 %diagramma
 %TODO da implementare. Da questa schermata, l'amministratore può ricercare le postazioni per ....
-\paragraph{UC-20 Visualizzazione di tutte le postazioni presenti nel sistema}
+\paragraph{UC-21 Visualizzazione di tutte le postazioni presenti nel sistema}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video l'insieme delle postazioni registrate in una stanza;
@@ -13,7 +13,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.1 Visualizzazione postazione per codice identificativo}
+\paragraph{UC-21.1 Visualizzazione postazione per codice identificativo}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare una postazione censita nel sistema tramite codice identificativo;
@@ -27,7 +27,7 @@
 \end{itemize}
 
 
-\paragraph{UC-20.2 Visualizzazione postazioni prenotate}
+\paragraph{UC-21.2 Visualizzazione postazioni prenotate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni prenotate censite nel sistema;
@@ -40,7 +40,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.3 Visualizzazione postazioni occupate}
+\paragraph{UC-21.3 Visualizzazione postazioni occupate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni occupate censite nel sistema;
@@ -53,7 +53,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.4 Visualizzazione postazioni libere}
+\paragraph{UC-21.4 Visualizzazione postazioni libere}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni libere censite nel sistema;
@@ -66,7 +66,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.5 Visualizzazione postazioni igienizzate}
+\paragraph{UC-21.5 Visualizzazione postazioni igienizzate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni igienizzate censite nel sistema;
@@ -79,7 +79,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.6 Visualizzazione postazioni sporche}
+\paragraph{UC-21.6 Visualizzazione postazioni sporche}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni sporche censite nel sistema;
@@ -92,7 +92,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.7 Visualizzazione postazioni abilitate}
+\paragraph{UC-21.7 Visualizzazione postazioni abilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare un insieme di postazioni abilitate censite nel sistema;
@@ -105,7 +105,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-20.8 Visualizzazione postazioni disabilitate}
+\paragraph{UC-21.8 Visualizzazione postazioni disabilitate}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare una insieme di postazioni disabilitate censite nel sistema;
@@ -119,7 +119,7 @@
 \end{itemize}
     
 %diagramma
-\paragraph{UC-21 Visualizzazione informazioni sulla postazione}
+\paragraph{UC-22 Visualizzazione informazioni sulla postazione}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video tutte le informazioni disponibili di una determinata postazione registrata nel sistema;
@@ -127,12 +127,12 @@
     \item \textbf{Postcondizione:} l'amministratore visualizza tutti i dettagli della postazione selezionata;
     \item \textbf{Scenario principale:}
     \begin{itemize}
-        \item l'amministratore, dall'elenco delle postazioni registrate nel sistema, seleziona una postazione desiderata ed accede alla schermata di visualizzazione delle informazioni quali codice postazione (UC-21.1 Visualizzazione codice postazione), stato postazione (UC-21.2 Visualizzazione stato della postazione) e stato pulizia della postazione per la postazione scelta (UC-21.3 Visualizzazione stato pulizia della postazione);
+        \item l'amministratore, dall'elenco delle postazioni registrate nel sistema, seleziona una postazione desiderata ed accede alla schermata di visualizzazione delle informazioni quali codice postazione (UC-22.1 Visualizzazione codice postazione), stato postazione (UC-22.2 Visualizzazione stato della postazione) e stato pulizia della postazione per la postazione scelta (UC-22.3 Visualizzazione stato pulizia della postazione);
         \item l'amministratore visualizza tutte informazioni per la postazione precedentemente selezionata.
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-21.1 Visualizzazione codice postazione}
+\paragraph{UC-22.1 Visualizzazione codice postazione}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video il codice identificativo univoco di una postazione precedentemente selezionata;
@@ -144,7 +144,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-21.2 Visualizzazione stato della postazione}
+\paragraph{UC-22.2 Visualizzazione stato della postazione}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video lo stato di una postazione all'interno di una stanza precedentemente selezionata;
@@ -157,7 +157,7 @@
 \end{itemize}
     
 
-\paragraph{UC-21.3 Visualizzazione stato pulizia della postazione} %sporca/igienizzata
+\paragraph{UC-22.3 Visualizzazione stato pulizia della postazione} %sporca/igienizzata
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} visualizzare a video lo stato di pulizia di una postazione all'interno della stanza precedentemente selezionata;
@@ -171,21 +171,21 @@
 
 
 %diagramma
-\paragraph{UC-22 Aggiunta di una nuova postazione}
+\paragraph{UC-23 Aggiunta di una nuova postazione}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} aggiungere una postazione alla lista di postazioni disponibili all'interno di una stanza. Per inserire una nuova postazione, l'amministrazione prima seleziona la stanza dove inserire la nuova postazione (UC-21.1 Selezione stanza), successivamente, è richiesto l'inserimento del codice identificativo della postazione (UC-21.2 Inserimento codice postazione) ed infine, inserire il codice del tag RFID per associarlo alla postazione appena creata (UC-21.3 Inserimento codice del tag RFID);
+    \item \textbf{Descrizione:} un amministratore pu\`{o} aggiungere una postazione alla lista di postazioni disponibili all'interno di una stanza. Per inserire una nuova postazione, l'amministrazione prima seleziona la stanza dove inserire la nuova postazione (UC-23.1 Selezione stanza), successivamente, è richiesto l'inserimento del codice identificativo della postazione (UC-23.2 Inserimento codice postazione) ed infine, inserire il codice del tag RFID per associarlo alla postazione appena creata (UC-23.3 Inserimento codice del tag RFID);
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} una nuova postazione \`{e} stata aggiunta alla lista di postazioni disponibili;
     \item \textbf{Scenario principale:}
     \begin{itemize}
-        \item l'amministratore inserisce le informazioni riguardanti la postazione da aggiungere, quali stanza (UC-21.1 Selezione stanza), codice postazione (UC-21.2 Inserimento codice postazione) e codice del tag RFID (UC-21.3 Inserimento codice del tag RFID);
+        \item l'amministratore inserisce le informazioni riguardanti la postazione da aggiungere, quali stanza (UC-23.1 Selezione stanza), codice postazione (UC-23.2 Inserimento codice postazione) e codice del tag RFID (UC-23.3 Inserimento codice del tag RFID);
         \item l'amministratore conferma le informazioni inserite e, se corrette, sono salvate nel sistema.
     \end{itemize}
 \end{itemize}
 
 
-\paragraph{UC-22.1 Selezione stanza}
+\paragraph{UC-23.1 Selezione stanza}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} selezionare una stanza già censita nel sistema dove inserire una nuova postazione dall'elenco delle stanze nel form di inserimento di una nuova postazione;
@@ -198,7 +198,7 @@
 \end{itemize}
 
 
-\paragraph{UC-22.2 Inserimento codice postazione}
+\paragraph{UC-23.2 Inserimento codice postazione}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore inserisce un codice identificativo univoco per contrassegnare la nuova postazione all'interno della stanza selezionata nel form di inserimento di una nuova postazione;
@@ -207,12 +207,12 @@
 	\item \textbf{Scenario principale:}
 	      \begin{enumerate}
 		      \item l'amministratore inserisce il codice identificativo della nuova postazione che si vuole aggiungere;
-		      \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-24 Errore: codice postazione non valido)
+		      \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-25 Errore: codice postazione non valido)
 	      \end{enumerate}
 \end{itemize}
     
 
- \paragraph{UC-22.3 Inserimento codice del tag RFID}
+ \paragraph{UC-23.3 Inserimento codice del tag RFID}
  \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore inserisce il codice tag RFID per contrassegnare la nuova postazione all'interno della stanza selezionata nel form di inserimento di una nuova postazione;
@@ -221,15 +221,15 @@
 	\item \textbf{Scenario principale:}
 	      \begin{enumerate}
 		      \item l'amministratore inserisce il codice tag RFID della nuova postazione che si vuole aggiungere;
-		      \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-23 Errore: codice RFID già associato ad un'altra postazione)
+		      \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-24 Errore: codice RFID già associato ad un'altra postazione)
 	      \end{enumerate}
 	      \item \textbf{Estensioni:}
 		\begin{enumerate}
-		      \item UC-23 Errore: codice RFID già associato ad un'altra postazione.
+		      \item UC-24 Errore: codice RFID già associato ad un'altra postazione.
 	      \end{enumerate}
 \end{itemize}
 
-\paragraph{UC-23 Errore: codice RFID già associato ad un'altra postazione}
+\paragraph{UC-24 Errore: codice RFID già associato ad un'altra postazione}
     \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} il sistema non permette l'assegnazione di quel codice RFID se esso è già stato utilizzato in un'altra postazione censita. In tal caso viene mostrato un errore a video auto esplicativo;
@@ -244,7 +244,7 @@
 \end{itemize}
 
 
-\paragraph{UC-24 Errore: codice postazione non valido}
+\paragraph{UC-25 Errore: codice postazione non valido}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore inserisce un codice identificativo errato di nuova postazione all'interno della stanza selezionata nel form di inserimento o modifica di una postazione;
@@ -257,12 +257,12 @@
 	      \end{enumerate}
 	 \item \textbf{Estensioni:}
 	 	\begin{enumerate}
-		       \item UC-24.1 Errore: codice postazione non univoco;
-		       \item UC-24.2 Errore: il codice postazione contiene caratteri non validi.
+		       \item UC-25.1 Errore: codice postazione non univoco;
+		       \item UC-25.2 Errore: il codice postazione contiene caratteri non validi.
 	        \end{enumerate}
 \end {itemize}
 
-\paragraph{UC-24.1 Errore: codice postazione non univoco}
+\paragraph{UC-25.1 Errore: codice postazione non univoco}
     \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} il sistema non permette l'assegnazione di quel nome se il codice identificativo della nuova postazione è già stato utilizzato. In tal caso viene mostrato un errore a video auto esplicativo;
@@ -276,7 +276,7 @@
 	      \end{enumerate}
 \end{itemize}
     
-\paragraph{UC-24.2 Errore: il codice postazione contiene caratteri non validi}
+\paragraph{UC-25.2 Errore: il codice postazione contiene caratteri non validi}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore ha provato ad inserire un nuovo codice identificativo ma l'assegnazione non è andata a buon fine poiché il codice inserito contiene dei caratteri speciali che non rispettano i criteri di inserimento;
@@ -290,22 +290,22 @@
 \end{itemize}
 
 %diagramma
-\paragraph{UC-25 Modifica dati di una postazione}
+\paragraph{UC-26 Modifica dati di una postazione}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
-    \item \textbf{Descrizione:} un amministratore pu\`{o} modificare i dati di una postazione già esistente modificando, nello specifico, il codice della postazione (UC-25.1 Modifica codice postazione) e/o il codice RFID (UC-25.2 Modifica codice tag RFID);
+    \item \textbf{Descrizione:} un amministratore pu\`{o} modificare i dati di una postazione già esistente modificando, nello specifico, il codice della postazione e/o il codice RFID;
     \item \textbf{Precondizione:} l'amministratore si trova nella pagina di gestione delle postazioni nell'applicazione web;
     \item \textbf{Postcondizione:} l'amministratore ha modificato con successo i dati relativi ad una postazione esistente;
     \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore seleziona, dalla lista delle postazioni, la postazione da modificare;
-        \item l'amministratore modifica il codice postazione (UC-25.1 Modifica codice postazione) e/o il codice RFID (UC-25.2 Modifica codice tag RFID);
+        \item l'amministratore modifica il codice postazione (UC-26.1 Modifica codice postazione) e/o il codice RFID (UC-26.2 Modifica codice tag RFID);
         \item l'amministratore conferma le informazioni inserite e, se corrette, sono salvate nel sistema.
     \end{itemize}
 \end{itemize}
 
 
-\paragraph{UC-25.1 Modifica codice postazione}
+\paragraph{UC-26.1 Modifica codice postazione}
   \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 	\item \textbf{Descrizione:} l'amministratore vuole modificare il codice di una postazione già censita nel sistema;
@@ -314,16 +314,16 @@
 	\item \textbf{Scenario principale:}
 	      \begin{enumerate}
 		      \item l'amministratore seleziona l'apposita funzionalità di modifica del codice identificativo della postazione precedentemente selezionata;
-		      \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-24 Errore: codice postazione non valido).
+		      \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-25 Errore: codice postazione non valido).
 	      \end{enumerate}
 	\item \textbf{Estensioni:}
 		\begin{enumerate}
-		      \item UC-24 Errore: codice postazione non valido.
+		      \item UC-25 Errore: codice postazione non valido.
 	      \end{enumerate}
 \end{itemize}
 
     
-\paragraph{UC-25.2 Modifica codice tag RFID}
+\paragraph{UC-26.2 Modifica codice tag RFID}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} modificare il tag RFID di una postazione già censita nel sistema;
@@ -332,12 +332,12 @@
     \item \textbf{Scenario principale:}
     \begin{itemize}
         \item l'amministratore seleziona l'apposita funzionalità di modifica del codice tag RFID della postazione precedentemente selezionata;
-        \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-23 Errore: codice RFID già associato ad un'altra postazione).
+        \item il sistema controlla l'univocità del codice inserito. Qualora questa sia rispettata, elaborerà correttamente la richiesta, altrimenti mostrerà a video un messaggio di errore esplicativo (UC-24 Errore: codice RFID già associato ad un'altra postazione).
     \end{itemize}
 \end{itemize}
 
  
-\paragraph{UC-26 Rimozione di una postazione dal sistema}
+\paragraph{UC-27 Rimozione di una postazione dal sistema}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} rimuovere una postazione dalla lista di postazioni disponibili all'interno di una stanza. Per rimuovere una postazione, l'amministratore accede alla schermata di dettaglio della postazione che si desidera rimuovere e, successivamente, l'amministratore selezionerà la funzione di rimozione della postazione selezionata. Una volta rimossa la postazione, tutte le prenotazioni vengono annullate;
@@ -351,7 +351,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-27 Disabilitazione di una postazione}
+\paragraph{UC-28 Disabilitazione di una postazione}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} disabilitare una postazione dalla lista di postazioni disponibili all'interno di una stanza. Per disabilitare una postazione, l'amministratore accede alla schermata di dettaglio della postazione che si desidera disabilitare e, successivamente, l'amministratore selezionerà la funzione di disabilitazione della postazione selezionata. Una volta disabilitata la postazione, tutte le prenotazioni vengono annullate;
@@ -365,7 +365,7 @@
     \end{itemize}
 \end{itemize}
 
-\paragraph{UC-28 Riabilitazione di una postazione precedentemente disabilitata}
+\paragraph{UC-29 Riabilitazione di una postazione precedentemente disabilitata}
 \begin{itemize}
     \item \textbf{Attori:} amministratore;
     \item \textbf{Descrizione:} un amministratore pu\`{o} ri-abilitare una postazione precedentemente segnata come disabilitata all'interno di una stanza. Per ri-abilitare una postazione, l'amministratore accede alla schermata di dettaglio della postazione che si desidera ri-abilitare e, successivamente, l'amministratore selezionerà la funzione di ri-abilitazione della postazione selezionata. Una volta ri-abilitata la postazione, questa torna ad essere fruibile e prenotabile dagli utenti;
