--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioUtenti.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioUtenti.tex
@@ -14,13 +14,13 @@
 	      \begin{enumerate}
 		      \item l'amministratore accede alla funzionalità di visualizzazione e ricerca utenti;
 		      \item l'amministratore visualizza una lista di tutti gli utenti;
-		      \item l'amministratore può ricercare un determinato utente per nome/cognome/email (UC-4.1, UC-4.2, UC-4.3);
+		      \item l'amministratore può ricercare un determinato utente per nome (UC-4.1)/cognome (UC-4.2)/email (UC-4.3);
 		      \item l'amministratore può filtrare la lista per i diversi ruoli riconosciuti nel sistema (UC-4.4).
 	      \end{enumerate}
 \end{itemize}
 \begin{figure}[H]
     \centering
-      \includegraphics[scale=0.50]{src/CasiDUso/immagini/VisualizzazioneUtenti.png}
+      \includegraphics[scale=0.40]{src/CasiDUso/immagini/VisualizzazioneUtenti.png}
     \caption{Diagramma relativo la visualizzazione degli utenti registrati nel sistema}
 \end{figure}
 
@@ -112,7 +112,7 @@
               \item l'amministratore seleziona il ruolo da assegnare al nuovo utente (UC-5.1 Selezione ruolo del nuovo utente);
               \item l'amministratore inserisce l'indirizzo email dell'utente da registrare (UC-5.2 Inserimento email del nuovo utente);
               \item l'amministratore conferma l'inserimento;
-              \item il sistema elabora la richiesta: se l'indirizzo email è valido verrà inviata una mail contenente il link, altrimenti verrà visualizzato un messaggio di errore (UC-9 Errore: email non valida).
+              \item il sistema elabora la richiesta: se l'indirizzo email è valido verrà inviata una mail contenente il link, altrimenti verrà visualizzato un messaggio di errore (UC-8 Errore: email non valida).
           \end{enumerate}
 \end{itemize}
 \begin{figure}[H]
